# M2Mapping

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: base.yaml
config/ROG-Map/: rog.yaml
config/fast_livo/: 2_dao_fast.yaml  campus.yaml  cbd.yaml  culture01.yaml  drive.yaml  fast_livo.yaml  red_bird.yaml  sysu.yaml
config/replica/: replica.yaml
config/rviz/: vis_thirdperson.rviz
docs/: FAST_LIVO2_Data_Training.md  index.html
eval/: draw.py  draw_loss.py  draw_mem.py  inter_poses.py
eval/image_metrics/: eval_image.sh  loss_utils.py  metrics.py  metrics2.py  metrics_single.py
eval/image_metrics/lpipsPyTorch/: __init__.py
eval/structure_metrics/: cull_mesh.py  eval_utils.py  evaluator.py
include/data_loader/: data_loader.cpp  data_loader.h
include/data_loader/data_parsers/: base_parser.cpp  base_parser.h  fastlivo_parser.hpp  kitti_parser.hpp  ncd_parser.hpp  neuralrgbd_parser.hpp  oxford_spires_parser.hpp  r3live_parser.hpp  replica_parser.hpp  rosbag_parser.hpp
include/mesher/: mesher.cpp  mesher.h
include/mesher/cumcubes/: __init__.py  utils.py
include/mesher/cumcubes/include/: cumcubes.hpp  utils.cuh
include/mesher/cumcubes/src/: bindings.cpp  cumcubes.cpp  cumcubes_kernel.cu
include/neural_mapping/: neural_mapping.cpp  neural_mapping.h
include/neural_net/: encoding_map.cpp  encoding_map.h  local_map.cpp  local_map.h  sub_map.cpp  sub_map.h
include/neural_net/encodings/: encodings.h
include/optimizer/: loss.cpp  loss.h
include/optimizer/loss_utils/: loss_utils.cpp  loss_utils.h
include/params/: params.cpp  params.h
include/tracer/: tracer.cpp  tracer.h
include/tracer/sphere_trace/: sphere_trace.cpp  sphere_trace.h  sphere_trace_cuda.cu
include/utils/: coordinates.cpp  coordinates.h  loss_utils.hpp  tqdm.hpp  utils.cpp  utils.h
include/utils/ply_utils/: .gitignore  README.md  ply_utils_pcl.cpp  ply_utils_pcl.h  ply_utils_torch.cpp  ply_utils_torch.h  tinyply.h
include/utils/ray_utils/: ray_utils.cpp  ray_utils.h
include/utils/sensor_utils/: cameras.hpp  sensors.hpp
launch/: rviz.launch
src/: neural_mapping_node.cpp
submodules/: .gitignore
submodules/ROG-Map/rog_map/: CMakeLists.txt  package.xml
submodules/ROG-Map/rog_map/config/: default.rviz  rog.yaml  rog_vis.yaml
submodules/ROG-Map/rog_map/include/: common_type_name.h
submodules/ROG-Map/rog_map/include/PointCloudCuda/: cutil_inline.h  pcl_cuda_base.h  point_cloud.cuh  point_types.h  time_gpu.h
submodules/ROG-Map/rog_map/include/rog_map_cuda/: config.cuh  cuda_macro.cuh  inf_map_class.cuh  prob_map_class.cuh  ray_caster.cuh  rog_map_class.cuh  sliding_map_class.cuh
submodules/ROG-Map/rog_map/include/rog_map_cuda/cuda_kernels/: inf_map_kernels.cuh  kernel_debug.cuh  prob_map_kernels.cuh
submodules/ROG-Map/rog_map/src/rog_map_cuda/: config.cu  inf_map_implementation.cu  prob_map_implementation.cu  ray_caster.cu  rog_map_implementation.cu  sliding_map_implementation.cu
